minor style change

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- NAVBAR -->
         <header class="navbar">
             <div class="navbar__link-brand">
-                WZ
+                ツ
             </div>
              <div class="navbar__link-toggle">
                <i class="fas fa-bars fa-2x"></i>
@@ -104,44 +104,44 @@
             <section id="skills-section" class="skills-section">
                 <h1>COMPÉTENCES</h1>
                 <div class="skills">
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--html">
                             <h3>HTML</h3>
                             <img src="./public/images/html.png" alt="html logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--css">
                             <h3>CSS</h3>
                             <img src="./public/images/css.png" alt="css logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--javascript">
                             <h3>Javascript</h3>
                             <img src="./public/images/javascript.png" alt="javascript logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--react">
                             <h3>React</h3>
                             <img src="./public/images/react.png" alt="react logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--bootstrap">
                             <h3>Bootstrap</h3>
                             <img src="./public/images/bootstrap.png" alt="bootstrap logo">
                         </div>
 
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--express">
                             <h3>Express</h3>
                             <img src="./public/images/express.png" alt="express logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--mongodb">
                             <h3>Mongo DB</h3>
                             <img src="./public/images/mongodb.png" alt="mongodb logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--git">
                             <h3>Git</h3>
-                            <img src="./public/images/git.png" alt="mongodb logo">
+                            <img src="./public/images/git.png" alt="git logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--github">
                             <h3>Github</h3>
                             <img src="./public/images/github.png" alt="github logo">
                         </div>
-                        <div class="skills__item">
+                        <div class="skills__item skills__item--animal">
                             <h3>Animal Crossing</h3>
                             <img src="./public/images/animal.png" alt="animal logo">
                         </div>
